# hands_on_deep_research

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
docs/: logging.md
docs/guides/: architecture.md  usage.md
examples/: logging_example.py  simple_research.py
src/: __init__.py  llm_call.py
src/agent/: code_agent.py  function_call_agent.py
src/agents/: __init__.py  base.py  evaluator.py  research.py
src/base_class/: base_agent.py  base_model.py  base_tool.py
src/cli/: __init__.py  __main__.py  main.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  processing.py  web.py
src/pipelines/: __init__.py  base.py  research.py
src/prompts/: code_agent_prompt.py
src/tool/: google_search.py  python_runner.py
src/utils/: __init__.py  api.py  logging.py  logging_utils.py
tests/unit/: __init__.py  test_data_processing.py
tests/unit/agent/: __init__.py  test_code_agent.py
tests/unit/tool/: test_duckducktogo.py  test_python_runner.py
